[package]
name = "tungsay"
version = "0.6.7"
authors = ["Soltrubeg"]
edition = "2024"
description = "A cowsay CLI but instead of a cow, it's tung tung tung sahur"
license = "MIT"
keywords = [
    "cli",
    "ascii",
    "ascii-art",
    "fun",
    "brainrot"
]
categories = [
    "command-line-interface",
    "games"
]
